[package]
name = "macrotest"
version = "1.2.0"
authors = ["eupn <eupn@protonmail.com>"]
edition = "2018"
rust-version = "1.36"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/eupn/macrotest"
description = "Test harness for macro expansion"

[dependencies]
diff = "0.1"
fastrand = "2"
glob = "0.3"
prettyplease = { git = "https://github.com/taiki-e/prettyplease.git", branch = "dev-old-msrv" } # lower MSRV
serde = "=1.0.156"
serde_derive = "=1.0.156"
serde_json = "1.0"
syn = { version = "1", default-features = false, features = ["parsing", "full"] }
toml = "=0.5.9"

# For MSRV
[target.'cfg(any())'.dependencies]
proc-macro2 = "=1.0.65"
quote = "=1.0.30"
